<resources>
    <string name="app_name">REMED</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="b_r_sayfaya_ge">öbür sayfaya geç</string>
    <string name="set_reminder">SET REMINDER</string>
    <string name="enter_the_notes">Enter the notes:</string>
    <string name="enter_the_starting_hour">Enter the starting hour:</string>
    <string name="choose_the_hour_period_eg_remind_me_in_every_hour">Choose the hour period: (eg: remind me in every .. hour)</string>
    <string name="how_many_days_will_you_use_the_medicine">How many days will you use the medicine?</string>
    <string name="enter_the_medicine_name">Enter the medicine name:</string>
    <string name="preference_file_key">com.example.remed.PREFERENCE_FILE_KEY</string>
    <string name="password_again">Password again</string>
    <string name="name">Name</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_field_required">Email Required</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="show_my_meds">Show my Meds</string>

</resources>
